# ckan-rescue

./: .gitignore  README.md  pyproject.toml
src/ckan_rescue/: cli.py  datajson.py  dcat.py
src/data_rescue/: ckan_dcat.py  cli.py
