[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project]
name = "data_rescue"
version = "0.0.1"
description = "A tool to rescue (download) data from data portals."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name="Patricio Del Boca", email="patriciodelboca@proton.me" },
]

[project.urls]
Homepage = "https://github.com/pdelboca/data-rescue"
Issues = "https://github.com/pdelboca/data-rescue/issues"

[project.scripts]
ckan-dcat-download = "data_rescue.cli:main"
